# cavag

./: compile.bat  compile.py  setup.cfg  setup.py
cavag/: _utils.py  fiber.py  fpcavity.py  gaussbeam.py  hgbeam.py  mirror.py  misc.py  utils.py
cavag/entities/: fiber.py  mirror.py  misc.py
cavag/extension/: fcqs.py
cavag/tests/: test__utils.py  test_app.py  test_extens_fcqs.py  test_fiber.py  test_fpcavity.py  test_gaussbeam.py  test_hgbeam.py  test_mirror.py  test_misc.py
docs/: README.md  _sidebar.md  fiber.md  fpcavity.md  gaussbeam.md  hgbeam.md  index.html  introduction.md  mirror.md  misc.md  notation.md  utils.md
docs/.bin/: notebook.bat  startup.bat
docs/_assets/: support.css
docs/_assets/example/: hermite_gaussian_beam.ipynb  show_gaussbeam.ipynb  show_hgbeam.ipynb  show_printable_object.py
docs/_assets/htmlcssjs/: object.md  pycls.html  support.css  support.js
docs/_assets/notes/: hermite_gaussian_beam.ipynb
docs/_assets/pics/uml/: _utils_uml.dot
docs/_assets/picture/uml/: _utils_uml.dot  cavag_uml.dot
docs/extension/: fcqs.md  readme.md  utils.md
tests/: test__utils.py  test_fiber.py  test_fpcavity.py  test_gaussbeam.py  test_mirror.py  test_misc.py
