[metadata]
name = cavag
version = 1.0
license = MIT License
author = Xingyu Bao
author_email = baoxingyubob@outlook.com
description =  calculation framework about fiber, cavity and gaussbeam
classifiers = 
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires = 
    numpy
    scipy
    matplotlib
